# dfMRI_tools

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  modules.rst  pydfMRI.rst
pydfMRI/: dairy.py  handle_nifti.py  imaging_tools.py  plot.py
